--- a/src/assets/i18n/deu.json
+++ b/src/assets/i18n/deu.json
@@ -167,17 +167,18 @@
     "lbl_kilometers": "Kilometer",
 	"lbl_kilometers_required" : "Es werden Kilometer benötigt.",
 	"lbl_exterior_color": "Außenfarbe",
-	"lbl_exterior_color_others": "Others",
+	"lbl_exterior_color_others": "Andere",
     "lbl_anthracite": "Anthrazit",
     "lbl_beige": "Beige",
     "lbl_black": "Schwarz",
     "lbl_blue": "Blau",
-    "lbl_bordeaux": "Bordeaux",
+    "lbl_bordeaux": "Burgunderrot",
     "lbl_brown": "Braun",
     "lbl_gold": "Gold",
     "lbl_green": "Grün",
     "lbl_grey": "Grau",
     "lbl_orange": "Orange",
+	"lbl_Altro":"Altro",
     "lbl_pink": "Rosa",
     "lbl_red": "Rot",
     "lbl_silver": "Silber",
@@ -185,11 +186,11 @@
     "lbl_violet": "Violett",
     "lbl_White": "Weiß",
     "lbl_yellow": "Gelb",
-    "lbl_bubble_effect": "Blaseneffekt",
+    "lbl_bubble_effect": "Blasen-Effekt",
     "lbl_individual_paint": "Individuelle Farbe",
     "lbl_matt_paint": "Matte Farbe",
-    "lbl_mettalic": "Mettalic",
-    "lbl_solid_paint": "Feststofflackierung",
+    "lbl_mettalic": "Metallisch",
+    "lbl_solid_paint": "Uni-Lack",
     "lbl_interior_color": "Innenfarbe",
     "lbl_options_additional_information": "Weitere Details",
     "lbl_gen_condition": "Allgemeiner Zustand",
