--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -169,12 +169,13 @@
     "lbl_beige": "Beige",
     "lbl_black": "Black",
     "lbl_blue": "Blue",
-    "lbl_bordeaux": "Bordeaux",
+    "lbl_bordeaux": "Burgundy",
     "lbl_brown": "Brown",
     "lbl_gold": "Gold",
     "lbl_green": "Green",
     "lbl_grey": "Grey",
     "lbl_orange": "Orange",
+	"lbl_Altro":"Altro",
     "lbl_pink": "Pink",
     "lbl_red": "Red",
     "lbl_silver": "Silver",
