--- a/src/assets/i18n/fra.json
+++ b/src/assets/i18n/fra.json
@@ -167,17 +167,18 @@
 	"lbl_1st_reg": "1er enreg.",
 	"lbl_kilomètres": "kilomètres",
 	"lbl_exterior_color": "Couleur extérieure",
-	"lbl_exterior_color_others": "Others",
+	"lbl_exterior_color_others": "Autres",
 	"lbl_anthracite": "Anthracite",
 	"lbl_beige": "Beige",
 	"lbl_black": "Noir",
 	"lbl_blue": "Bleu",
-	"lbl_bordeaux": "Bordeaux",
+	"lbl_bordeaux": "Bourgogne",
 	"lbl_brown": "Marron",
 	"lbl_gold": "Or",
 	"lbl_green": "Vert",
 	"lbl_grey": "Gris",
 	"lbl_orange": "Orange",
+	"lbl_Altro":"Altro",
 	"lbl_pink": "Rose",
 	"lbl_red": "Rouge",
 	"lbl_silver": "Argent",
@@ -185,14 +186,14 @@
 	"lbl_violet": "Violet",
 	"lbl_White": "Blanc",
 	"lbl_yellow": "Jaune",
+    "lbl_bubble_effect": "Effet de bulle",
+	"lbl_bubble_effet": "Effet de bulle",
+	"lbl_individual_paint": "Peinture individuelle",
+	"lbl_matt_paint": "Peinture mate",
+	"lbl_mettalic": "Métallique",
+	"lbl_solid_paint": "Peinture solide",
 	"lbl_car_finish": "Peinture carrosserie",
 	"lbl_car_Finish":"Peinture carrosserie",
-    "lbl_bubble_effect": "Blaseneffekt",
-	"lbl_bubble_effet": "L'effet de bulle",
-	"lbl_individual_paint": "Peinture individuelle",
-	"lbl_matt_paint": "Une peinture matte",
-	"lbl_mettalic": "Métallique",
-	"lbl_solid_paint": "Peinture unie",
 	"lbl_interior_color": "Couleur intérieure",
 	"lbl_options_additional_information": "Plus de détails",
 	"lbl_gen_condition": "Conditions générales",
