--- a/src/assets/i18n/ita.json
+++ b/src/assets/i18n/ita.json
@@ -170,23 +170,24 @@
   "lbl_1st_reg": "1^ Immatr.",
   "lbl_kilometri": "Chilometri",
   "lbl_exterior_color": "Colore esterno",
-  "lbl_exterior_color_others": "Others",
+  "lbl_exterior_color_others": "Altro",
   "lbl_antracite": "Antracite",
   "lbl_beige": "Beige",
   "lbl_black": "Nero",
   "lbl_blue": "Blu",
-  "lbl_bordeaux": "Bordeaux",
+  "lbl_bordeaux": "Borgogna",
   "lbl_brown": "Marrone",
   "lbl_gold": "Oro",
   "lbl_green": "Verde",
   "lbl_grey": "Grigio",
-  "lbl_orange": "Arancio",
+  "lbl_orange": "Arancione",
+	"lbl_Altro":"Altro",
   "lbl_pink": "Rosa",
   "lbl_red": "Rosso",
   "lbl_silver": "Argento",
   "lbl_turquoise": "Turchese",
   "lbl_violet": "Viola",
-	"lbl_anthracite": "Anthracite",
+	"lbl_anthracite": "Antracite",
   "lbl_White": "Bianco",
   "lbl_yellow": "Giallo",
   "lbl_car_finish": "Tipo di verniciatura",
@@ -194,8 +195,8 @@
 	"lbl_bubble_effet": "Effetto bolla",
   "lbl_individual_paint": "Vernice individuale",
   "lbl_matt_paint": "Vernice opaca",
-  "lbl_mettalic": "Metallizzato",
-  "lbl_solid_paint": "Solida",
+  "lbl_mettalic": "Metallico",
+  "lbl_solid_paint": "Vernice solida",
   "lbl_interior_color": "Colore interno",
   "lbl_options_additional_information": "Maggiori dettagli",
   "lbl_gen_condition": "Condizioni generali",
